--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,15 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint src",
-    "dev": "poi",
+    "client:dev": "poi",
+    "server:prod": "cross-env NODE_ENV=production python ../server/server.py",
+    "server:dev": "cross-env NODE_ENV=development nodemon --exec \"python\" ../server/server.py --watch ../server",
+    "dev": "npm-run-all -p server:dev client:dev",
     "build": "poi build",
     "report": "poi build --bundle-report",
     "serve": "serve dist --single",
-    "test": "tyu"
+    "test": "tyu",
+    "start": "npm-run-all build server:prod"
   },
   "author": {
     "name": "konstantinov",
@@ -41,11 +45,14 @@
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
+    "cross-env": "^5.1.5",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-vue": "^2.0.2",
     "eslint-plugin-import": "^2.10.0",
     "eslint-plugin-vue": "^4.4.0",
+    "nodemon": "^1.17.4",
+    "npm-run-all": "^4.1.3",
     "poi": "^9.0.0",
     "poi-preset-bundle-report": "^2.0.0",
     "poi-preset-offline": "^9.0.0",
