--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -5,6 +5,7 @@
     ],
     "rules": {
         "linebreak-style": "off",
-        "no-underscore-dangle": "off"
+        "no-underscore-dangle": "off",
+        "camelcase": "off"
     }
 }
