--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "ajv": "^6.4.0",
+    "axios": "^0.18.0",
     "d3-geo": "^1.10.0",
     "date-fns": "^1.29.0",
     "lodash": "^4.17.10",
